fix bugs.
